[package]
name = "with_capacity_safe"
version = "0.2.0"
authors = ["Juzumaru <dochy.ksti@gmail.com>"]
edition = "2018"

license = "MIT"
description = "A safer alternative to Vec::with_capacity"
repository = "https://github.com/dochy-ksti/with_capacity_safe"
readme = "readme.md"
keywords = ["Vec", "try_reserve", "with_capacity"]

[dependencies]
